# oyster-train

./: .gitignore  Makefile  README.md  join.py  serve.py  setup-phone.sh  test_e2e_fl.py
client/android/: README.md  build.gradle.kts  settings.gradle.kts
client/android/app/: build.gradle.kts  proguard-rules.pro
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/java/ai/clawphones/train/: BootReceiver.kt  DataManager.kt  FlowerClient.kt  MainActivity.kt  NativeEngine.kt  OysterTrainApplication.kt  TrainingService.kt
client/android/app/src/main/java/ai/clawphones/train/config/: TrainingConfig.kt
client/android/app/src/main/java/ai/clawphones/train/di/: AppModule.kt
client/android/app/src/main/java/ai/clawphones/train/ui/: TrainingScreen.kt  TrainingViewModel.kt
client/android/app/src/main/java/ai/clawphones/train/ui/theme/: Theme.kt
client/android/app/src/main/java/ai/oyster/train/: BootReceiver.kt  DataManager.kt  FlowerClient.kt  MainActivity.kt  NativeEngine.kt  OysterTrainApp.kt  TrainingEngine.kt  TrainingService.kt
client/android/app/src/main/java/ai/oyster/train/config/: TrainingConfig.kt
client/android/app/src/main/java/ai/oyster/train/ui/: TrainingScreen.kt  TrainingViewModel.kt
client/android/app/src/main/java/ai/oyster/train/ui/theme/: Theme.kt
client/android/app/src/main/python/oyster/: __init__.py  engine.py  qwen_engine.py
client/android/app/src/main/res/drawable/: ic_paused.xml  ic_wifi_connected.xml  ic_wifi_disconnected.xml
client/android/app/src/main/res/mipmap-hdpi/: ic_launcher.xml
client/android/app/src/main/res/mipmap-xxxhdpi/: ic_launcher_round.xml
client/android/app/src/main/res/values/: strings.xml  themes.xml
client/qvac/: CMakeLists.txt  README.md  build_android.sh  model_prep.py  test_build.sh
compressor/: README.md  __init__.py  lora_extractor.py  pipeline.py  signsgd.py  topk_sparse.py
data/: data_sources.py  non_iid.py  privacy.py  tokenizer.py
deploy/: Dockerfile  Dockerfile.registry  Dockerfile.server  dashboard_api.py  docker-compose.yml  model_distributor.py  monitor.py  orchestrator.py  prometheus.yml  registration_server.py  requirements.txt  scheduler.py
deploy/grafana/: dashboard.json
models/: __init__.py  lewm_config.py  lewm_loader.py  quantization.py  qwen25_config.py  qwen25_loader.py
server/: __init__.py  config.py  diloco_strategy.py  flower_server.py  lewm_server.py  requirements.txt
simulation/: __init__.py  data_loader.py  fl_client.py  lewm_client.py  run_e2e.py  sim_client.py  sim_orchestrator.py
simulation/configs/: default.yaml
specs/: S01-flower-server.md  S02-compression.md  S03-simulation.md  S04-integration.md  S05-qvac-build.md  S06-android-client.md  S07-data-pipeline.md  S08-deploy-system.md  S09-e2e-fl-simulation.md  S10-real-model-integration.md  S11-qvac-build-system.md  S12-android-project.md  S13-training-data.md  S14-deploy-integration.md  S15-lewm-integration.md
tests/: test_compression.py  test_deploy.py  test_e2e_simulation.py  test_integration.py  test_qvac_build.py  test_real_model.py  test_server.py
